--- a/index.html
+++ b/index.html
@@ -27,9 +27,23 @@
             <p class="is-defaultText">アカウント情報</p>
           </div>
           <form class="form-content" action="#" method="POST">
-            <!--
-              ここに続きのHTMLを書いていきましょう
-            -->
+            <div class="name-box">
+              <p class="name-text">
+                名字
+                <span class="kome">※</span>
+                <input type="text" id="name" name="name" required>
+              </p>
+            </div>
+            <div class="name-box">
+              <p class="name-text">
+                名前
+                <span class="kome">※</span>
+                <input type="text" id="name" name="name" required>
+              </p>
+            </div>
+            <div class="gender">
+              <p class="gender-text">性別</p>
+            </div>
             <p class="agreement">アカウントを作成することにより、<a class="link-color" href>利用規約</a>と<a class="link-color" href>プライバシーポリシー</a>に同意するものとします。</p>
           </form>
         </div>
